[gd_scene load_steps=2 format=2]

[ext_resource path="res://OrderSystem.gd" type="Script" id=1]

[node name="OrderSystem" type="Node"]
script = ExtResource( 1 )

[node name="AvailableOrders" type="Node" parent="."]

[node name="IssuedOrders" type="Node" parent="."]

[node name="RejectedOrders" type="Node" parent="."]

[node name="ActiveOrders" type="Node" parent="."]

[node name="UnfulfilledOrders" type="Node" parent="."]

[node name="SatisfiedOrders" type="Node" parent="."]

[node name="UnloggedOrders" type="Node" parent="."]

[node name="ClosedOrders" type="Node" parent="."]
